--- a/app/views/solutions/index.html.erb
+++ b/app/views/solutions/index.html.erb
@@ -53,7 +53,7 @@
     </div>
 
     <div id="filters-modal" class="fixed inset-0 z-50 flex items-center justify-center bg-black bg-opacity-40 hidden" data-solutions-filter-target="modal">
-      <div class="bg-white rounded-lg shadow-lg w-full max-w-3xl mx-auto p-6 relative overflow-y-auto max-h-[90vh]">
+      <div class="bg-white rounded-lg shadow-lg w-full max-w-[75%] mx-auto p-6 relative overflow-y-auto max-h-[95vh]">
         <button type="button"
                 class="absolute top-4 right-4 text-gray-400 hover:text-gray-600"
                 data-action="click->solutions-filter#closeModal">
@@ -76,9 +76,8 @@
               <button type="button" 
                       class="text-sm text-blue-600 hover:text-blue-800 focus:outline-none"
                       data-action="click->solutions-filter#toggleSection"
-                      data-solutions-filter-target="deploymentTypeToggleText"
                       data-section="deployment-type">
-                Show
+                <span data-solutions-filter-target="deploymentTypeToggleText">Show</span>
                 <svg xmlns="http://www.w3.org/2000/svg" 
                      class="h-4 w-4 inline ml-1 transition-transform" 
                      fill="none" 
@@ -129,9 +128,8 @@
                 <button type="button" 
                         class="text-sm text-blue-600 hover:text-blue-800 focus:outline-none"
                         data-action="click->solutions-filter#toggleSection"
-                        data-solutions-filter-target="techStackToggleText"
                         data-section="tech-stack">
-                  Show
+                  <span data-solutions-filter-target="techStackToggleText">Show</span>
                   <svg xmlns="http://www.w3.org/2000/svg" 
                        class="h-4 w-4 inline ml-1 transition-transform" 
                        fill="none" 
@@ -202,9 +200,8 @@
                 <button type="button" 
                         class="text-sm text-blue-600 hover:text-blue-800 focus:outline-none"
                         data-action="click->solutions-filter#toggleSection"
-                        data-solutions-filter-target="categoriesToggleText"
                         data-section="categories">
-                  Hide
+                  <span data-solutions-filter-target="categoriesToggleText">Hide</span>
                   <svg xmlns="http://www.w3.org/2000/svg" 
                        class="h-4 w-4 inline ml-1 transition-transform rotate-180" 
                        fill="none" 
