--- a/app/views/solutions/index.html.erb
+++ b/app/views/solutions/index.html.erb
@@ -96,7 +96,7 @@
       </div>
     </div>
 
-    <div id="filters-modal" class="fixed inset-0 z-50 flex items-center justify-center bg-black bg-opacity-40 hidden" data-solutions-filter-target="modal">
+    <div id="filters-modal" class="fixed inset-0 z-50 flex items-center justify-center bg-opacity-10 backdrop-blur-sm hidden" data-solutions-filter-target="modal">
       <div class="bg-white rounded-lg shadow-lg w-full max-w-[75%] mx-auto p-6 relative overflow-y-auto max-h-[95vh]">
         <button type="button"
                 class="absolute top-4 right-4 text-gray-400 hover:text-gray-600"
